# social-media-analysis

client/: package-lock.json  package.json
client/src/app/: globals.css
server/: pyproject.toml
server/server/: settings.py
